2008-06-14  Adam Fedor  <fedor@gnu.org>

	* Version 0.14.0

2008-06-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m,
	* Source/x11/XGDragView.m: Convert X event millisecond timestamp
	to NSEvent second timestamp.

2008-05-25  Adam Fedor  <fedor@gnu.org>

	* Revert library license version to 2 until applications
	can be converted

2008-06-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Don't use special
	clip adjustment for cairo > 1.6.0, as this got fixed there.

2008-06-01 18:00-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/x11/XGGeneric.h:
	* Source/x11/XGServerWindow.m: Added code to automatically make 
	any window which uses the NSDesktopWindowLevel also be omnipresent.
	This capability will be added as a style later.

2008-05-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-copyWithZone:): Avoid double
	allocation of dashes memory.
	* Source/gsc/GSGState.m (-DPSrectfill::::, -DPSrectstroke::::,
	-DPSrectclip::::): Don't use autoreleased objects.

2008-05-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (check_modifier,
	-receivedEvent:...): Faster checking for modifiers.

2008-05-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m (-coveredCharacterSet): Moved the
	swapping into the loop, where the actual data is available.
	Patch by Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>.

2008-05-25  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Fail if libXext or libXt not found when building
	x11 server. Set have_freetype variable.

2008-05-25  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Tools/GNUmakefile.postamble: Use GNUSTEP_DOC instead of
	GNUSTEP_DOCUMENTATION, and GNUSTEP_DOC_MAN instead of
	GNUSTEP_DOCUMENTATION_MAN.

2008-05-22  Adam Fedor  <fedor@gnu.org>

	* Source/cairo/CairoContext.m (-GSSetDevice:::): Fix memory leak.

2008-05-16  Adam Fedor  <fedor@gnu.org>
