@@ -1,3 +1,10 @@
+2008-06-26 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoGState.m (-copyWithZone:): Use a runtime
+	version check and adjust from > to >= 1.6.0.
+	* Source/cairo/CairoFontInfo.m (-setupAttributes): Slightly better
+	error checks. 
+
 2008-06-14  Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.14.0
